Splits Upsert into Add and Update functions. Buggy code to be fixed
